[package]
name = "mkcfs"
description = "Complex FileSystem partition formatter"
license = "MIT"
homepage = "https://github.com/gnussy/mkcfs"
repository = "https://github.com/gnussy/mkcfs"
readme = "Readme.md"
documentation = "https://docs.rs/mkcfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfs = { version="0.1.0", path = "../cfs" }
clap = { version = "4.3.10", features = ["derive"] }
deku = "0.16.0"
